# abstract-scroller

./: .gitignore  Makefile  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
backend/: devserver.py
backend/jobs/: mvp_snapshot.py
backend/publish/: ids.py  manifest.py  order.py  tiles.py  writer.py
contracts/: api.md
contracts/schemas/: manifest.schema.json  tile.schema.json
data/: sample.csv
frontend/: index.html  md-scroll.html
services/iterator/: main.go
services/summary/: main.go
