[project]
name = "abstract-scroller"
version = "0.0.1"
description = "Snapshot publisher + tile viewer MVP"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0,<3.0",
  "numpy>=1.26,<3.0",
  "brotli>=1.1",
  "jsonschema>=4.0",
  "scikit-learn>=1.3"
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend", "backend.*"]
exclude = ["data*", "frontend*", "services*", "contracts*"]